RESOLVED FIXED213534
[WinCairo] Cannot build without resource load statistics
https://bugs.webkit.org/show_bug.cgi?id=213534
Summary [WinCairo] Cannot build without resource load statistics
Stephan Szabo
Reported 2020-06-23 14:39:42 PDT
Seemingly after https://bugs.webkit.org/show_bug.cgi?id=213291 builds without ENABLE(RESOURCE_LOAD_STATISTICS) started to fail on wincairo with errors about uses of things behind the enable from outside. Initial errors were: D:\github\webkit\Source\WebKit\UIProcess/WebsiteData/WebsiteDataStore.cpp(1013): error C2039: 'resourceLoadStatisticsRegistrableDomains': is not a member of 'WebKit::WebsiteDataRecord' D:\github\webkit\Source\WebKit\UIProcess\WebsiteData\WebsiteDataStore.h(86): note: see declaration of 'WebKit::WebsiteDataRecord' D:\github\webkit\Source\WebKit\UIProcess/WebsiteData/WebsiteDataStore.cpp(1013): error C2530: 'registrableDomain': references must be initialized D:\github\webkit\Source\WebKit\UIProcess/WebsiteData/WebsiteDataStore.cpp(1013): error C3531: 'registrableDomain': a symbol whose type contains 'auto' must have an initializer D:\github\webkit\Source\WebKit\UIProcess/WebsiteData/WebsiteDataStore.cpp(1013): error C2143: syntax error: missing ';' before ':' D:\github\webkit\Source\WebKit\UIProcess/WebsiteData/WebsiteDataStore.cpp(1013): error C2143: syntax error: missing ';' before ')'
Attachments
Patch (2.69 KB, patch)
2020-06-23 14:47 PDT, Stephan Szabo
achristensen: review-
Patch (2.85 KB, patch)
2020-06-25 10:14 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2020-06-23 14:47:27 PDT
Created attachment 402594 [details] Patch I'm not sure if just using the old code in the not resource load statistics enabled case is the best option but it gets past the compile-time errors.
Alex Christensen
Comment 2 2020-06-24 11:21:03 PDT
Comment on attachment 402594 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402594&action=review > Source/WebKit/UIProcess/API/C/WKWebsiteDataStoreRef.cpp:75 > +#if ENABLE(RESOURCE_LOAD_STATISTICS) WKWebsiteDataStoreRemoveITPDataForDomain should probably just do nothing or immediately call the callback if RESOURCE_LOAD_STATISTICS is not enabled, because there's nothing to do. > Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:1013 > +#if ENABLE(RESOURCE_LOAD_STATISTICS) Ditto. I think it's ok to just do nothing here if RESOURCE_LOAD_STATISTICS is not enabled.
Stephan Szabo
Comment 3 2020-06-25 10:14:58 PDT
Created attachment 402743 [details] Patch Updated to call the callback immediately in the API case and to do nothing in the other when the flag isn't set.
EWS
Comment 4 2020-06-26 10:16:29 PDT
Committed r263568: <https://trac.webkit.org/changeset/263568> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402743 [details].
Radar WebKit Bug Importer
Comment 5 2020-06-26 10:17:14 PDT
Radar WebKit Bug Importer
Comment 6 2020-06-26 10:17:15 PDT
Note You need to log in before you can comment on or make changes to this bug.