[WinCairo] Cannot build without resource load statistics https://bugs.webkit.org/show_bug.cgi?id=213534

Reviewed by Don Olmstead.

Build fix for !ENABLE(RESOURCE_LOAD_STATISTICS)

* UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
* UIProcess/WebsiteData/WebsiteDataStore.cpp:


Canonical link: https://commits.webkit.org/226446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263568 268f45cc-cd09-0410-ab3c-d52691b4dbfc